# web-frameworks

./: .anylint  .bandit  .deepsource.toml  .ebert.yml  .editorconfig  .env  .env.template  .eslintrc.json  .flake8  .gitignore  .hound.yml  .jshintrc  .luacheckrc  .mise.toml  .pyup.yml  .restyled.yaml  .rtx.toml  .rubocop.yml  .ruby-version  .talismanrc  .travis.yml  .version  .yamllint  .zappr.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRAMEWORKS.yml  Gemfile  LICENSE  MAINTAINERS.txt  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.mustache.md  README2.md  Rakefile  bandit.yaml  config.yaml  data.json  data.min.json  (+19 more)
.buildkite/: pipeline.yml
.ci/: docker_release.sh  dump.sql  has_to_run.sh  lint.sh  load.sh  mapping.yml  preflight.sh  save.sh  template.mustache  test.sh
.dependabot/: config.yaml  config.yml  mapping.yaml
.github/: CODEOWNERS  MATRIX_EXAMPLES.md  MATRIX_QUICKREF.md  MATRIX_SYSTEM.md  MATRIX_VISUAL.md  MIGRATION_GUIDE.md  README.md  dependabot.yml  matrix-config.yaml  reviewers.yml
.github/ISSUE_TEMPLATE/: submit-a-framework.md  suggest-a-framework.md
.semaphore/: schedule.yml  semaphore.yml
.spec/: route_spec.rb  spec_helper.rb
.tasks/: ci.rake  cloud  collect.rake  db.rake  ping.rake  support.rb
benchmarker/: .gitignore  Dockerfile  Framework.swift  Package.resolved  Package.swift  StartFrameworks.swift  Utilities.swift  WrkBenchmark.swift  frameworks.json  main.swift  run.sh  wrk-report.lua
c/: .gitignore  Dockerfile  config.yaml
clojure/: .gitignore  Dockerfile  config.yaml
cpp/: Dockerfile  config.yaml
cpp/drogon/: CMakeLists.txt  Dockerfile  README.md  config.json  config.yaml  drogon.dockerfile
cpp/drogon/cmake_modules/: FindDrogon.cmake
cpp/drogon/controllers/: BenchmarkCtrl.cc  BenchmarkCtrl.h  UserCtrl.cc  UserCtrl.h
cpp/drogon/drogon_benchmark/: CMakeLists.txt  config.json  main.cc
cpp/drogon/plugins/: SyncPlugin.cc
cpp/evhtp/: .gitignore  CMakeLists.txt  Dockerfile  config.yaml  config.yml  main.cpp
cpp/nawa/: CMakeLists.txt  config.ini  config.yaml  main.cpp
cpp/oatpp/: .gitignore  CMakeLists.txt  Dockerfile  config.yaml
cpp/oatpp/src/: App.cpp  AppComponent.hpp
cpp/oatpp/src/controller/: MyController.cpp  MyController.hpp
cpp/oatpp/utility/: install-oatpp-modules.sh
crystal/: .gitignore  Dockerfile  LICENSE  config.yaml  config.yml  digitalocean.Dockerfile  shard.yml
csharp/: .gitignore  .version  Directory.Build.props  Dockerfile  config.yaml  config.yml  csharp.sln  prepare.sh
d/: Dockerfile  config.yaml
dart/: .gitignore  Dockerfile  aot.Dockerfile  config.yaml  vm.Dockerfile
doc/: which_is_the_fastest.xlsx
docs/: index.html
elixir/: .gitignore  Dockerfile  config.yaml
frameworks/cpp/evhtp/: CMakeLists.txt  Dockerfile
fsharp/: .gitignore  Dockerfile  config.yaml
fsharp2/: Dockerfile
gleam/: Dockerfile  config.yaml
go/: .gitignore  Dockerfile  config.yaml  config.yml  digitalocean.Dockerfile
guile/: Dockerfile  config.yaml
haskell/: .gitignore  Dockerfile  config.yaml
haskell/scotty/: .gitignore  Main.hs  config.yaml  myproj.cabal  server.cabal  stack.yaml
haskell/servant/: config.yaml  servant-proj.cabal  server.cabal  stack.yaml
haskell/servant-proj/: servant-proj.cabal
haskell/servant/app/: Main.hs
haskell/servant/src/: Lib.hs
java/: .gitignore  Dockerfile  config.yaml
javascript/: .gitignore  Dockerfile  bun.Dockerfile  config.yaml  deno.Dockerfile  happyx.Dockerfile  node.Dockerfile
julia/: Dockerfile  config.yaml
kotlin/: .gitignore  Dockerfile  config.yaml
lua/: Dockerfile  config.yaml
nim/: .gitignore  Dockerfile  config.yaml
node/: .gitignore  config.yaml  config.yml
objc/: .gitignore
ocaml/: Dockerfile  config.yaml
perl/: Dockerfile  config.yaml
php/: .gitignore  Dockerfile  config.yaml  config.yml  swoole.Dockerfile
pony/: Dockerfile  config.yaml
python/: .gitignore  Dockerfile  config.yaml  config.yml
r/: Dockerfile  config.yaml
res/: README.md  which_is_the_fastest.xlsx  ~$which_is_the_fastest.xlsx
ruby/: .gitignore  Dockerfile  config.yaml  config.yml  iodine.Dockerfile  puma.Dockerfile
rust/: .gitignore  Dockerfile  config.yaml  config.yml
rust/actix/: Cargo.toml  Dockerfile  config.yaml
rust/actix/src/: main.rs
rust/axum/: Cargo.toml  config.yaml
rust/axum/src/: main.rs
rust/gotham/: Cargo.toml  Dockerfile  config.yaml
rust/gotham/src/: main.rs
rust/graphul/: Cargo.toml  config.yaml
rust/graphul/src/: main.rs
rust/hyper/: Cargo.toml  config.yaml
rust/hyper/src/: main.rs
rust/hyperlane/: Cargo.toml  README.md  config.yaml
rust/hyperlane/src/: main.rs
rust/iron/: Cargo.toml  Dockerfile  config.yaml  config.yml
rust/iron/src/: main.rs
rust/micro-web/: Cargo.toml  config.yaml
rust/micro-web/src/: main.rs
rust/nickel/: Cargo.toml  Dockerfile  config.yaml
rust/nickel/src/: main.rs
rust/ohkami/: Cargo.toml  config.yaml
rust/ohkami/src/: main.rs
rust/oxidy/: Cargo.toml  config.yaml
rust/oxidy/src/: main.rs
rust/poem/: Cargo.toml  config.yaml
rust/poem/src/: main.rs
rust/rama/: Cargo.toml  config.yaml
rust/rama/src/: main.rs
rust/rocket/: Cargo.toml  Dockerfile  config.yaml  digitalocean.dockerfile
rust/rocket/src/: main.rs
rust/salvo/: Cargo.toml  config.yaml
rust/salvo/src/: main.rs
rust/silent/: Cargo.toml  config.yaml
rust/silent/src/: main.rs
rust/summer-boot/: Cargo.toml  config.yaml
rust/summer-boot/src/: main.rs
rust/summer-boot/src/resources/: application-test.yml  application.yml
rust/tide/: Cargo.toml  config.yaml
rust/tide/src/: main.rs
rust/viz/: Cargo.toml  config.yaml
rust/viz/src/: main.rs
rust/warp/: Cargo.toml  config.yaml
rust/warp/src/: main.rs
scala/: .gitignore  Dockerfile  config.yaml
spec/: benchmark_spec.cr  spec_helper.cr
src/: client.cr  server_kemal.cr  server_route_cr.cr
swift/: .gitignore  Dockerfile  config.yaml  config.yml
tools/: .gitignore  _stats.sh  benchmark.cr  configure.cr  pipeline.lua  pipeline_post.lua  stats.exs
v/: Dockerfile  config.yaml
zig/: .gitignore  Dockerfile  config.yaml
(+3817 files in other folders)
