name:                servant-proj
version:             0.1.0.0
-- synopsis:
-- description:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-proj-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-proj
  default-language:    Haskell2010
