[package]
name = "server"
version = "0.0.0"
authors = [
    "Oisín Mac Fhearaí <denpashogai@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
edition = "2018"

[dependencies]
actix-web = "4.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false
