[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false

[dependencies]
axum = "~0.6"
tokio = { version = "~1.25", features = ["macros", "rt-multi-thread"] }
