[package]
name = "server"
version = "0.1.0"
authors = ["Isaac Whitfield <iw@whitfin.io>"]
edition = "2018"
publish = false

[dependencies]
gotham = "~0.6"
gotham_derive = "~0.6"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
incremental = false
