[package]
name = "server"
version = "0.1.0"
authors = ["Isaac Whitfield <iw@whitfin.io>"]
edition = "2021"
publish = false

[dependencies]
gotham = { version = "0.7", features = ["derive"], default-features = false }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
incremental = false
