[package]
name = "server"
version = "0.0.0"
authors = ["Isaac Whitfield <iw@whitfin.io>"]
edition = "2021"
publish = false

[dependencies]
gotham = { version = "0.7", features = ["derive"], default-features = false }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false
