[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
http = "1.2.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false
