[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
http-body-util = "0.1"
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false
