[package]
name = "server"
version = "0.0.0"
authors = ["taicsuzu <taicsuzu@yahoo-corp.jp>"]
edition = "2018"
publish = false

[dependencies]
iron = "0.6"
router = "0.6"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false
