[package]
name = "server"
version = "0.0.0"
authors = [
    "zavakid <zava.kid@gmail.com>",
]
edition = "2024"

[dependencies]
micro-web="0.1"
tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "signal", "test-util"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false
