[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false

[dependencies]
ohkami = { version = "0.21", features = ["rt_tokio"] }
nio    = { version = "0.0" }
