[package]
name = "server"
version = "0.0.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false

[dependencies]
oxidy = "~0.5.0"
tokio = { version = "~1.22.0", features = ["full"] }

