[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]

[dependencies]
salvo = { version = "~0.37.0", default-features = false}
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
incremental = false
