[package]
name = "server"
version = "0.0.0"
edition = "2021"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]

[dependencies]
salvo = { version = "0.37", default-features = false }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false
