[package]
name = "server"
version = "0.0.0"
edition = "2021"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]

[dependencies]
salvo = { version = "0.40", default-features = false, features = ["http1"]}
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
