[package]
name = "server"
version = "0.0.0"
edition = "2021"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false

[dependencies]
tide = "0.16"
async-std = { version = "1", features = ["attributes"] }
