[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
viz = "~0.4"
tokio = { version = "~1.27.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false
