[package]
name = "server"
version = "0.0.0"
edition = "2021"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false

[dependencies]
warp = {version = "0.4", features = ["server"]}
tokio = { version = "1", features = ["full"] }
